static/css/blog.css
@media screen and (min-width: 600px) and (max-width: 1500px) {
  body {
    font-size: 18px;
  }

  #wrapper {
    max-width: 700px;
  }
}


@media screen and (min-width: 1500px)  {
  body {
    font-size: 26px;
  }
  #wrapper {
    max-width: 1000px;
  }
}

html {
  /*margin: 0px;*/
  margin: 0 auto;
  width: 90%;
  /*min-width: 306px;*/
}

body {
  margin: 0px;
}

header {
  font-size: 1.7em;
  background-color: white;
  position: fixed;
  left:0;
  right:0;
  width: inherit;
  margin: inherit;
}

#header-left {
  float: left;
}

.menu-control-wrapper {
  padding: .5em;
  position: relative;
  cursor: pointer;
  transition-property: background-color, color;
  transition-duration: 0.15s;
  transition-timing-function: ease-out;
}

.menu-control-wrapper:hover {
  color: white;
  background-color: black;
  transition-property: background-color, color;
  transition-duration: 0.15s;
  transition-timing-function: ease-in;
}

.header-item {
  display: inline-block;
}

.menu-item {
  display: block;
  text-decoration: none;
  color: black;
  float: left;
  width: 6.3em;
}

#search-input {
  position: absolute;
  z-index: -1;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: calc(100% - 6px);
  border: 2px solid white;
  background-color: white;
  font-size: .7em;
  color: grey;
  font-style: italic;
  font-weight: 300;
}

#search-control-wrapper {
  float: right;
}

#content {
  padding-top: 3.5em;
  padding-left: .5em;
}

#post-list {
  list-style: none;
  padding-left: 0px;
}

.post {
  margin: 0px;
  margin-bottom: 3em;
}

.post-body {
  font-size: 1em;
}

.post-title {
  font-size: 1.5em;
  margin: 0px;
}

#blog-title {
  width:6.3em;
  white-space:nowrap;
}

.blog-center {
  /*display: inline-block;*/
  float: left;
}

#sub-header {
  font-size: 1.4em;
  margin-bottom: 1.7em;
  margin-top: .3em;
}


.post-date {
  font-size: .7em;
  font-weight: 300;
}

#nav-button {
  float: left;
}

#footer {
  position: absolute;
  left: 0;
  right: 0;
}

#footer-line {
  height: 1em;
  background-color: black;
}

